--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,14 +13,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: set up JDK 11
+
+    # 1. Set up Java Environment
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
+        # Caches the Gradle dependencies to speed up subsequent runs
         cache: gradle
 
+    # 2. Grant Execute Permission (The fix you needed)
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
+    # 3. Lint the code (Good practice to catch style/structure issues)
+    - name: Run Lint checks
+      run: ./gradlew lintDebug
+
+    # 4. Build the project
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew assembleRelease
+
+    # 5. Upload Artifact (Makes the built APK available for download)
+    - name: Upload Release APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-release-apk
+        path: app/build/outputs/apk/release/*.apk
+        # The path 'app/build/outputs/apk/release/' is standard for Android projects.
